Remove watch from ts build and update package file to later NPM version
Signed-off-by: Gary O'Neall <gary@sourceauditor.com>

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "tsc -w",
+    "build": "tsc",
     "build-link": "tsc && npm link",
     "migrate": "node dist/index.js"
   },
